--- a/App1/App.config
+++ b/App1/App.config
@@ -9,6 +9,10 @@
         <assemblyIdentity name="Bunifu.Core" publicKeyToken="e8e24ccd28363fe9" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-1.11.5.1" newVersion="1.11.5.1" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Bunifu.Licensing" publicKeyToken="f89b4760ba7dcb6b" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.2.0.0" newVersion="3.2.0.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
