--- a/App1/App.config
+++ b/App1/App.config
@@ -13,6 +13,18 @@
         <assemblyIdentity name="Bunifu.Licensing" publicKeyToken="f89b4760ba7dcb6b" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-3.2.0.0" newVersion="3.2.0.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Syncfusion.Licensing" publicKeyToken="632609b4d040f6b4" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-18.4460.0.43" newVersion="18.4460.0.43" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Syncfusion.SfShared.Wpf" publicKeyToken="3d67ed1f87d44c89" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-18.4460.0.43" newVersion="18.4460.0.43" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Syncfusion.Shared.Wpf" publicKeyToken="3d67ed1f87d44c89" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-18.4460.0.43" newVersion="18.4460.0.43" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
