--- a/App1/packages.config
+++ b/App1/packages.config
@@ -2,4 +2,16 @@
 <packages>
   <package id="NAudio" version="1.10.0" targetFramework="net472" />
   <package id="NAudio.Lame" version="1.1.6" targetFramework="net472" />
+  <package id="Syncfusion.Licensing" version="18.4.0.43" targetFramework="net472" />
+  <package id="Syncfusion.SfBusyIndicator.WPF" version="18.4.0.43" targetFramework="net472" />
+  <package id="Syncfusion.SfInput.WPF" version="18.4.0.43" targetFramework="net472" />
+  <package id="Syncfusion.SfRadialMenu.WPF" version="18.3.0.53" targetFramework="net472" />
+  <package id="Syncfusion.SfSchedule.WPF" version="18.3.0.53" targetFramework="net472" />
+  <package id="Syncfusion.SfScheduler.WPF" version="18.4.0.43" targetFramework="net472" />
+  <package id="Syncfusion.SfShared.WPF" version="18.4.0.43" targetFramework="net472" />
+  <package id="Syncfusion.SfSkinManager.WPF" version="18.4.0.43" targetFramework="net472" />
+  <package id="Syncfusion.Shared.WPF" version="18.4.0.43" targetFramework="net472" />
+  <package id="Syncfusion.Themes.MaterialLight.WPF" version="18.4.0.43" targetFramework="net472" />
+  <package id="Syncfusion.Xamarin.Core" version="18.4.0.43" targetFramework="net472" />
+  <package id="Xamarin.Forms" version="4.5.0.617" targetFramework="net472" />
 </packages>
